--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,8 @@
         "jest": true
     },
     "extends": [
-        "eslint:recommended"
-          
+        "eslint:recommended",
+        "airbnb-base"          
     ],
     "globals": {
         "Atomics": "readonly",
@@ -17,6 +17,7 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
+    "parser": "babel-eslint",
     "rules": {
         "semi": ["error", "always"],
         "quotes": ["error", "single"]
