--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,8 @@
     "rules": {
         "semi": ["error", "always"],
         "quotes": ["error", "single"]        
-    }
+    },
+    "plugins": [
+        "html"
+    ]
 }
