--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-import": "^2.20.2",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
