--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
     "parser": "babel-eslint",
     "rules": {
         "semi": ["error", "always"],
-        "quotes": ["error", "single"]        
+        "quotes": ["error", "single"],
+        "prefer-destructuring": "off"
     },
     "plugins": [
         "html"
